fix top button spacing

--- a/frontend-farmigros/src/app/components/sell-button/sell-button.component.scss
+++ b/frontend-farmigros/src/app/components/sell-button/sell-button.component.scss
@@ -2,6 +2,6 @@
 
 .sell-button {
   position: absolute;
-  top: 10px;
+  top: 20px;
   left: 10px;
 }
